--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zxx">
 <head>
 	<title>LOGIN</title>
@@ -33,8 +33,8 @@
 	</style>
 
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<script src="html5shiv.min.js"></script>
+		<script src="respond.min.js"></script>
 	<![endif]-->
 
 </head>
@@ -75,19 +75,6 @@
 						<div class="col-xl-6 col-lg-7" >
 
 
-<form action="login.php" method="POST">
-    <div class="container">
-    <label for="uname" ><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <input type="submit" class="site-btn sb-solid" value="LOGIN">
-    </div>
-
-
-  </form>
 </div>
 
 
