--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zxx">
 <head>
 	<title>LOGIN</title>
@@ -33,8 +33,8 @@
 	</style>
 
 	<!--[if lt IE 9]>
-		<script src="html5shiv.min.js"></script>
-		<script src="respond.min.js"></script>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
 </head>
@@ -42,7 +42,7 @@
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
-	</div>
+		<span lang="en-in">&nbsp;</span></div>
 
 	<!-- Header section -->
 	<header class="header-section">
@@ -75,6 +75,21 @@
 						<div class="col-xl-6 col-lg-7" >
 
 
+<form action="login.php" method="POST">
+    <div class="container">
+    <label for="uname" ><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+
+      <input type="submit" class="site-btn sb-solid" value="LOGIN">
+    	<span lang="en-in"><span class="text-white"><strong>&nbsp;OR</strong></span>
+
+      <input type="submit" class="site-btn sb-solid" value="SIGN UP"></span></div>
+
+
+  </form>
 </div>
 
 
