--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	</style>
 
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<script src="html5shiv.min.js"></script>
+		<script src="respond.min.js"></script>
 	<![endif]-->
 
 </head>
@@ -72,7 +72,7 @@
 			<div class="hs-item set-bg" data-setbg="img/slider/2.jpg">
 				<div class="container">
 					<div class="row">
-						<div class="col-xl-6 col-lg-7" >
+						<div class="col-xl-6 col-lg-7" style="left: 0px; top: 0px" >
 
 
 <form action="login.php" method="POST">
@@ -86,10 +86,8 @@
       <input type="submit" class="site-btn sb-solid" value="LOGIN">
     	<span lang="en-in"><span class="text-white"><strong>&nbsp;OR</strong></span>
 
-      <input type="submit" class="site-btn sb-solid" value="SIGN UP"></span></div>
-
-
   </form>
+  <a href="signup.html">   <input class="site-btn sb-solid" value="SIGN UP"></span></div></a>
 </div>
 
 
