--- a/signup.html
+++ b/signup.html
@@ -119,6 +119,8 @@ var ufsex = document.form1.fsex;
                {
  	        if(allLetter(uname))
                   { 
+			   if(alphanumeric(uadd))
+              {
               if(countryselect(ucountry))
                 {
                   if(allnumeric(uzip))
