--- a/signup.html
+++ b/signup.html
@@ -53,6 +53,9 @@
 	font-weight: bold;
 	color: #00887A;
 }
+	.auto-style11 {
+	border-width: 0px;
+}
 	</style>
 
 	<!--[if lt IE 9]>
@@ -71,7 +74,9 @@
 	<header class="header-section">
 		<!-- logo -->
 
-			<img src="img\logo.png" alt=" Logo" width="800" height="170">
+			<a href="domservice.htm">
+
+			<img src="img\logo.png" alt=" Logo" width="800" height="170" class="auto-style11"></a>
 		</a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
@@ -113,14 +118,14 @@ var uemail = document.form1.email;
 var umsex = document.form1.msex;
 var ufsex = document.form1.fsex;
 
-	if(userid_validation(uid,1,12))
+	if(userid_validation(uid,5,12))
           {
-             if(userid_validation(passid,1,12))
+             if(userid_validation(passid,7,12))
                {
  	        if(allLetter(uname))
-                  { 
-			   if(alphanumeric(uadd))
-              {
+                  {
+        if(alphanumeric(uadd))
+              {  
               if(countryselect(ucountry))
                 {
                   if(allnumeric(uzip))
@@ -158,7 +163,7 @@ return true;
 
 function allLetter(uname)
 { 
-var letters = /^[A-Za-z ]+$/;
+var letters = /^[A-Za-z]+$/;
 if(uname.value.match(letters))
 {
 return true;
@@ -174,7 +179,7 @@ return false;
 
 function alphanumeric(uadd)
 { 
-var letters = /^[0-9a-zA-Z ]+$/;
+var letters = /^[0-9a-zA-Z]+$/;
 if(uadd.value.match(letters))
 {
 return true;
